--- a/css/estilo.css
+++ b/css/estilo.css
@@ -27,6 +27,10 @@
     font-weight: bold;
 }
 
+.pesquisa {
+    display: none;
+}
+
 /*Define a imagem de fundo do baner e transforma os itens dentro a section em Flex items*/
 .banner {
     background-image: url("/img/Banner__mobile.png");
@@ -199,6 +203,10 @@
 
 }
 
+.lista__link a:hover {
+    color: #2A7AE4;
+}
+
 /*Define o formulario como flex container e define os espaçamentos e posições dos itens*/
 .fale__conosco {
     display: flex;
@@ -293,4 +301,79 @@
     font-size: 16px;
     font-weight: 500;
     color: #464646;
+}
+
+@media screen and (min-width: 768px) {
+
+    .lupa__mobile {
+        display: none;
+    }
+
+    .direita {
+        display: flex;
+        width: 404px;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .pesquisa {
+        display: block;
+    }
+
+    .pesquisa__caixa {
+        width: 272px;
+        height: 40px;
+        border-radius: 20px;
+        background-color: #F5F5F5;
+        border: none;
+    }
+
+    .pesquisa__caixa::placeholder {
+        font-family: "Raleway";
+        font-size: 14px;
+        font-weight: 400;
+        color: #A2A2A2;
+    }
+
+    .float__label--pesquisa{
+        position: relative;
+        left: 260px;
+        
+    }
+
+    .float__label--pesquisa button {
+        border: none;
+        background-color: #ffffff00;
+        width: 24px;
+        height: 24px;
+        ;
+    }
+
+    .botao__login {
+        width: 166px;
+    }
+
+    .banner{
+        background-image: url("/img/Banner__tablet.png");
+        background-size: 100vw;
+        height: 352px;
+        gap: 16px;
+    }
+
+    .banner__titulo {
+        font-size: 52px;
+        margin: 0 32px 0 32px;
+    }
+
+    .banner__promo {
+        font-size: 22px;
+        margin: 0 32px 0 32px;
+    }
+    
+    .banner__botao{
+        width: 119px;
+        height: 40px;
+        margin: 0 0 32px 32px;
+    }
+    
 }
