--- a/css/estilo.css
+++ b/css/estilo.css
@@ -422,3 +422,23 @@
         width: 100vw;
     }
 }
+
+@media screen and (min-width: 1440px) {
+    .banner{
+        background-image: url("/img/Banner__desktop.png");
+        background-size: 100vw;
+        height: 352px;
+        gap: 16px;
+    }
+
+    .banner__titulo {
+        margin: 0 32px 8px 152px;
+    }
+    .banner__promo {
+        margin: 0 32px 8px 152px;
+    }
+    .banner__botao{
+        margin: 0 0 32px 152px;
+        height: 51px;
+    }
+}
